--- a/_posts/2020-01-21-2019-in-review.md
+++ b/_posts/2020-01-21-2019-in-review.md
@@ -4,86 +4,112 @@ title: "Zcoin: 2019 in Review"
 summary: "As we enter 2020 and an exciting time in the cryptosphere, we wish to look back on what we have achieved"
 tags: [news, dev, community]
 author: "Reuben Yap"
-img: ""
+img: "/blog/assets/2019-in-review/banner.png"
 alt: ""
 ---
-The year 2019 was a very eventful year for Zcoin with our long awaited [Sigma](what-is-sigma.html) privacy protocol coming alive, lots of new exchange listings, integrations and the unveiling of Lelantus the result of many months of research. As we enter 2020 and an exciting time in the cryptosphere, we wish to look back on what we have achieved.
+The year 2019 was a very eventful year for Zcoin with our long awaited [Sigma](https://www.firo.org/2019/03/20/what-is-sigma.html) privacy protocol coming alive, lots of new exchange listings, integrations and the unveiling of Lelantus the result of many months of research. As we enter 2020 and an exciting time in the cryptosphere, we wish to look back on what we have achieved.
 
-##Technology
+## Technology
 
-###Sigma
+### Sigma
 
-We finally went live with our Sigma mainnet in July 2019 which was the culmination of our commitment in 2017 to [remove trusted setup from the original Zerocoin protocol.]() Sigma greatly improved scalability with proof sizes that were 16x smaller than Zerocoin and we are already seeing much increased usage of the protocol vs our original Zerocoin protocol.
+![](/blog/assets/2019-in-review/sigma_mainnet-5.jpg)
+
+We finally went live with our Sigma mainnet in July 2019 which was the culmination of our commitment in 2017 to [remove trusted setup from the original Zerocoin protocol.](https://www.firo.org/2017/04/21/zcoin-moving-beyond-trusted-setup-in-zerocoin.html) Sigma greatly improved scalability with proof sizes that were 16x smaller than Zerocoin and we are already seeing much increased usage of the protocol vs our original Zerocoin protocol.
 
 The Sigma release also came with a much easier interface to mint and spend that automated the process of picking denominations and enforced certain best practices like reminting change greatly improving privacy.
 
+![](/blog/assets/2019-in-review/sigma.png)
+
 Most importantly our research and work into Sigma also set the foundation for our groundbreaking work in creating Lelantus, our next gen privacy protocol.
 
-###Lelantus
+### Lelantus
 
-In April 2019, we revealed our academic paper of [Lelantus](lelantus-firo.html) which was the result of our research in finding innovative solutions to improve privacy and is the work of our cryptographer Aram Jivanyan. It uses Sigma as a building block but allows users to burn any arbitrary amount and also to partially redeem mints greatly improving privacy. Lelantus solves the issues of using fixed denominations and closes off a lot of timing side channel analysis. This research garnered a lot of interest with competing privacy projects like Monero Research Labs looking at it as a possible scaling solution for their ring signatures and Beam announcing that it would be their solution to address the privacy drawbacks of Mimblewimble.
+In April 2019, we revealed our academic paper of [Lelantus](https://firo.org/2019/04/14/lelantus-firo.html) which was the result of our research in finding innovative solutions to improve privacy and is the work of our cryptographer Aram Jivanyan. It uses Sigma as a building block but allows users to burn any arbitrary amount and also to partially redeem mints greatly improving privacy. Lelantus solves the issues of using fixed denominations and closes off a lot of timing side channel analysis. This research garnered a lot of interest with competing privacy projects like Monero Research Labs looking at it as a possible scaling solution for their ring signatures and Beam announcing that it would be their solution to address the privacy drawbacks of Mimblewimble.
 
-In October 2019, we further improved upon this by [enabling full direct anonymous transfers in Lelantus.](direct-untraceable-anonymous-lelantus.html) This means that instead of having to redeem coins into the transparent layer, you can now give the right to redeem coins to third parties without having to redeem it into the transparent layer. We still are working on further ways to improve Lelantus and expand its capabilities
+In October 2019, we further improved upon this by [enabling full direct anonymous transfers in Lelantus.](https://www.firo.org/2019/10/03/direct-untraceable-anonymous-lelantus.html) This means that instead of having to redeem coins into the transparent layer, you can now give the right to redeem coins to third parties without having to redeem it into the transparent layer. We still are working on further ways to improve Lelantus and expand its capabilities
 
-###Zerocoin
+### Zerocoin
 
-We finally deprecated the Zerocoin privacy protocol which we used from September 2016 up till April 2019. While we had had iteratively improved on Zerocoin and had engaged cryptographers to further harden it which resulted in academic publications as well a fundamental flaw in the cryptography of Zerocoin was found in April 2019 which resulted in an inflation of the 0.58% of the current circulating supply (54,321 XZC). We identified the flaw and did a responsible disclosure to all major projects utilizing Zerocoin which prevented further damage to other cryptocurrencies and while the event was unfortunate, our prompt and responsible action gained our project credibility as well.
+We finally deprecated the Zerocoin privacy protocol which we used from September 2016 up till April 2019. While we had had iteratively improved on Zerocoin and had engaged cryptographers to further harden it which resulted in [academic publications](https://www.chaac.tf.fau.de/files/2018/04/attack-cryptocur.pdf) as well a fundamental flaw in the cryptography of Zerocoin was found in April 2019 which resulted in an inflation of the 0.58% of the current circulating supply (54,321 XZC). We identified the flaw and did a responsible disclosure to all major projects utilizing Zerocoin which prevented further damage to other cryptocurrencies and while the event was unfortunate, our prompt and responsible action gained our project credibility as well.
 
 It was also very fortunate that we were already in the end stages of development of Sigma, our replacement to Zerocoin and as such was able to transition to the replacement protocol quickly and it meant that our research and development work paid off.
 
-##Usability Improvements
+## Usability Improvements
 
-We launched our new wallet interface in November 2019 which greatly improves the look and feel of the Zcoin client. The new wallet uses ZMQ to communicate with the Zcoin daemon. We look forward to further improving on this in the coming months.
+![](/blog/assets/2019-in-review/suggestions.png)
 
-##Exchange Listings
+We launched our [new wallet interface](https://zcoin.io/new-zcoin-wallet-beta-release/) in November 2019 which greatly improves the look and feel of the Zcoin client. The new wallet uses ZMQ to communicate with the Zcoin daemon. We look forward to further improving on this in the coming months.
+
+## Exchange Listings
 
 In 2019 despite it being a bear market, Zcoin achieved a record number of listings on exchanges such as HitBTC, Coinex MXC, Probit exchange (KRW pairing), Digifinex, Atomars, Cryptofacil, Hotbit, VCC Exchange, Ovex (ZAR pairing), WazirX, ZG.com, Bitladon and Bitforex. The vast majority of these exchanges listed us on their own accord which is a testament to the strength of the Zcoin project. We look forward to partnering with quality exchanges to further increase Zcoin’s availability.
 
 We are also now an option on Bisq for decentralized trading!
 
-##Adoption and Partnerships
+## Adoption and Partnerships
 
-We also achieved many major milestones through partnering with other players in the ecosystem to make Zcoin more usable in day to day life.
+We also achieved many major milestones through partnering with other players in the ecosystem to make Zcoin more usable in day to day life. 
 
-Our partnership with Travala allows users to use Zcoin to book at 2 million accommodations and hotels worldwide.
+Our [partnership with Travala](https://zcoin.io/zcoin-partners-with-travel-booking-platform-travala-com/) allows users to use Zcoin to book at 2 million accommodations and hotels worldwide. 
 
-Zcoin’s integration into Constant P2P platform allows you to take out cash or stablecoin loans using your Zcoin as collateral with favorable rates and we further improved this deal by allowing you to host fractional masternodes with Constant to further reduce your interest rate to 3-4% APR!
+[Zcoin's integration into Constant P2P platform](https://medium.com/@zcoin/using-zcoin-as-collateral-for-loans-with-constant-7f31a1084f45) allows you to take out cash or stablecoin loans using your Zcoin as collateral with favorable rates and we further improved this deal by allowing you to host fractional masternodes with Constant to further reduce your interest rate to 3-4% APR! 
 
-We also have crypto credit card options with Polispay for European users with UnionPay support to come soon!
+We also have [crypto credit card options with Polispay](https://zcoin.io/zcoin-added-into-polispay-payment-platform-enabling-prepaid-mastercards-and-gift-cards/) for European users with UnionPay support to come soon! 
 
-For online merchants, we have developed a good relationship with Nowpayments that offers some of the best tools to accept Zcoin easily on your website!
+For online merchants, we have developed a good relationship with [Nowpayments](https://nowpayments.io/) that offers some of the best tools to accept Zcoin easily on your website! 
 
-For those in the physical space, Plusbit offers an app to serve as Point of Sales systems to accept Zcoin as well!
+For those in the physical space, [Plusbit](https://plusbit.tech/) offers an app to serve as [Point of Sales systems to accept Zcoin](https://play.google.com/store/apps/details?id=net.cit.z_coin) as well! 
 
-We also had some success with integrating into Thailand’s PromptPay QR code system that makes Zcoin spendable at millions of merchants nationwide! There are still some kinks to work out though and we are working for a better user experience!
+We also had some success with integrating into Thailand's PromptPay QR code system that makes Zcoin spendable at millions of merchants nationwide! There are still some [kinks to work out though](https://youtu.be/j0TysntEj4M) and we are working for a better user experience!
 
-##Mining
+## Mining
 
-Mining on Zcoin has remained to be one of the most profitable coins for GPUs to mine helping to grow our community. We released new versions of our open source miners for both AMD and Nvidia and there is also now a new mining pool at Zellabs!
+![](/blog/assets/2019-in-review/photo_2019-12-05_14-56-05.jpg)
 
-We are also pleased to have negotiated with F2Pool to reduce their PPS fee from 5% to 3%!
+Mining on Zcoin has remained to be one of the most profitable coins for GPUs to mine helping to grow our community. We released new versions of our [open source miners](https://zcoin.io/guide-on-how-to-mine-zcoin-xzc/) for both AMD and Nvidia and there is also now a new [mining pool at Zellabs](https://zellabs.net/coins/xzc)!
 
-Media Coverage, Interviews and Events
-Zcoin had amazing media coverage in 2019, we were featured on mainstream news for example the BBC, RT News, Nasdaq Trade Talks, MoneyFM and e27.
+We are also pleased to have negotiated with [F2Pool](https://www.f2pool.com/) to reduce their PPS fee from 5% to 3%!
 
-Poramin had a front cover page and full length feature in a prominent Chinese crypto magazine 时代观察. His op-ed on Facebook’s Libra and its lack of privacy was also featured in Business Times. The Nation Thailand also had an article on Poramin’s achievements in the cryptocurrency sphere.
+## Media Coverage, Interviews and Events
 
-We also had tons of interviews or features from prominent channels in the space such as Naomi Brockwell, Crypto Beadles, Boxmining, Altcoin Buzz, Crypto101, Voskcoin, BlockTV, The Crypto Show podcast, Monero Talk, Dash News, CoinBureau, EAK TV, CryptoFinder, Rock the Block Live and CryptoRamble just to name a few!
+![](/blog/assets/2019-in-review/rt.png)
 
-Zcoin was invited to present at many high profile events from the technical ones such as CESC San Francisco, Zero Knowledge Summit #3 and also at Defcon27 and MoneroKon! We also attended, participated and gave talks at the major blockchain conferences such as Consensus New York, San Francisco Blockchain Week, Invest Asia, Paris Blockchain Week, Token 2049, MIT Bitcoin Expo 2019, Chainpoint 19 and CMC’s The Capital.
+Zcoin had amazing media coverage in 2019, we were featured on mainstream news for example the [BBC](https://youtu.be/eovco0knJ3E), [RT News](https://youtu.be/WAeRVJgiCUs?t=935), [Nasdaq Trade Talks](https://www.pscp.tv/w/1OdKrLyBLAeJX), [MoneyFM](https://omny.fm/shows/money-fm-893/blockchain-technology-in-a-live-e-voting-system) and [e27](https://e27.co/without-privacy-asias-cashless-society-will-only-benefit-governments-20190925/).
 
-Sandra also had a front cover page and interview on Block Journal!
+Poramin had a front cover page and full length feature in a prominent Chinese crypto magazine 时代观察. His [op-ed on Facebook’s Libra](https://www.businesstimes.com.sg/opinion/facebooks-libra-puts-your-privacy-rights-at-risk-more-than-you-realise) and its lack of privacy was also featured in Business Times. [The Nation Thailand](https://www.nationthailand.com/Startup_and_IT/30360447) also had an article on Poramin’s achievements in the cryptocurrency sphere.
 
-##Community and Governance
-We have seen some important decisions being discussed and deliberated in our forums such as whether to increase Znode collateral or whether to change the mining algorithm. Make sure to join our forums!
+Sandra also had a [front cover page and interview on Block Journal!](https://blockjournal.io/shop/block-november-2019/)
+
+![](/blog/assets/2019-in-review/poramin.jpg)
+
+![](/blog/assets/2019-in-review/sandra.jpg)
+
+We also had tons of interviews or features from prominent channels in the space such as [Naomi Brockwell](https://youtu.be/cW4PgvbJbmw), [Crypto Beadles](https://youtu.be/UDzKpB97uos), [Boxmining](https://youtu.be/j0TysntEj4M), [Altcoin Buzz](https://youtu.be/dPmEcFWGVzY), [Crypto101](https://soundcloud.com/matthew-aaron-690749808/zcoin-zerocoin-cryptography-flaw-update), [Voskcoin](https://youtu.be/aAk4WHDzEl0), [BlockTV](https://blocktv.com/watch/2019-11-15/5dce6bfc1f1c2), [The Crypto Show podcast](https://soundcloud.com/heryptohow/reuben-yapp-of-zcoin-thia-elections-chain-locks-and-smart-assets-oh-my), [Monero Talk](https://youtu.be/uw-kt_VtWE4), [Dash News](https://youtu.be/bC1iP4ICx_w), [CoinBureau](https://youtu.be/OqCD6qozLkQ), [EAK TV](https://youtu.be/Lm9jqgjBfRA), [CryptoFinder](https://youtu.be/nwPE81_EpVE), [Rock the Block Live](https://youtu.be/Czsa6O8X9_Q) and [CryptoRamble](https://youtu.be/TKYhzT_cyy0) just to name a few!
+
+Zcoin was invited to present at many high profile events from the technical ones such as CESC San Francisco, [Zero Knowledge Summit #3](https://youtu.be/_9yU6rvEM64) and also at Defcon27 and [MoneroKon!](https://youtu.be/gb53Fe2iuqg) We also attended, participated and gave talks at the major blockchain conferences such as Consensus New York, San Francisco Blockchain Week, Invest Asia, Paris Blockchain Week, Token 2049, MIT Bitcoin Expo 2019, Chainpoint 19 and CMC’s The Capital.
+
+![](/blog/assets/2019-in-review/zksaram.png)
+
+## Community and Governance
+
+![](/blog/assets/2019-in-review/photo_2020-01-21_00-00-03.jpg)
+
+We have seen some important decisions being discussed and deliberated in [our forums](https://forum.zcoin.io/) such as whether to [increase Znode collateral](https://forum.zcoin.io/t/community-sentiment-on-znode-collateral/476/34) or whether to [change the mining algorithm.](https://forum.zcoin.io/t/should-we-change-pow-algorithm/477) Make sure to join our forums!
+
+We also embarked on several steps to decentralize Zcoin development and funding with the launch of the [Zcoin Crowdfunding System](https://zcs.zcoin.io/) where we are already seeing generous donations!
 
 In 2019 we also started actively creating language/region specific Telegram groups which have been rapidly growing! We have Zcoin groups for Turkey, Japan, Germany, Vietnam, Spanish, Indonesia, South Africa, Russia, Thailand, Iran, Portuguese and Philippines!
 
-##Charity Work
-Zcoin partnered with Binance Charity Foundation to be a launch partner for the Lunch for Children program which has benefited school children in Uganda! Our seed investors and team members donated funds totalling USD24,000 towards this cause. No development funds were used for this purpose.
+## Charity Work
 
-We also organized a collection for Iranian flood relief via Iran Rescuebit which managed to raise some money for flood relief.
+![](/blog/assets/2019-in-review/photo_2019-02-23_17-55-08.jpg)
 
-##What’s in store for Zcoin in 2020?
+Zcoin partnered with Binance Charity Foundation to be a [launch partner for the Lunch for Children program](https://zcoin.io/binance-charity-launches-lunch-for-children-campaign-with-zcoin/) which has benefited school children in Uganda! Our seed investors and team members donated funds totalling USD24,000 towards this cause. No development funds were used for this purpose.
+
+We also organized a collection for Iranian flood relief via [Iran Rescuebit](https://iranrescuebit.com/donate) which managed to raise some money for flood relief.
+
+## What’s in store for Zcoin in 2020?
+
 We will be updating our roadmap and clarifying our plans for 2020 and beyond soon! Stay tuned!
 We also embarked on several steps to decentralize Zcoin development and funding with the launch of the Zcoin Crowdfunding System where we are already seeing generous donations!
